syntax = "proto3";

package game;

option java_package = "com.wwttr.game";
option java_outer_classname = "Api";
option java_generic_services = true;

service GameService {
  rpc CreateGame (CreateGameRequest) returns (Game);
  rpc UpdateGame (UpdateGameRequest) returns (Game);
  rpc DeleteGame (DeleteGameRequest) returns (Empty);
  rpc GetGame (GetGameRequest) returns (Game);
  rpc ListGames (ListGamesRequest) returns (ListGamesResponse);
}

message Game {
  // The unique identifier of the game.
  // Server assigned. Required when updating.
  int32 id = 1;
  // The name displayed to users for the game.
  // Required.
  string display_name = 2;
  // The maximum number of users allowed to join this game.
  // Defaults to 6. Must be in the range [2, 6].
  int32 max_users = 3;
  // The game owner
  // Required.
  int32 host_user_id = 4;
  

  //List of players currently in game
  // Required
  //repeated int32 player_user_ids = 5;
  // Max number of players for the game allowed
  //int32 max_players = 6;
  //status....

}

message CreateGameRequest {
  // The game to create.
  // Required.
  Game game = 1;
}

message UpdateGameRequest {
  // The game to update.
  // Required.
  Game game = 1;
}

message DeleteGameRequest {
  // The id of the game to delete.
  // Required.
  string game_id = 1;
}

message GetGameRequest {
  // The id of the game to return.
  // Required.
  string game_id = 1;
}

message ListGamesRequest {

}

message ListGamesResponse {
  // The list of games.
  repeated Game games = 1;
}

message Empty {}
